DEV/Meta2/y.output
Terminals unused in grammar

    WHILE
    IF
    ELSE
    ARROW
    RESERVED


Grammar

    0 $accept: Program $end

    1 Program: CLASS ID LBRACE Xona RBRACE

    2 Xona: Expr
    3     | Assignment
    4     | ParseArgs
    5     | MethodInvocation
    6     | Statement
    7     | VarDecl
    8     | FieldDecl
    9     | FormalParams
   10     | MethodHeader

   11 MethodHeader: Type ID LPAR FormalParams RPAR
   12             | Type ID LPAR RPAR
   13             | VOID ID LPAR FormalParams RPAR
   14             | VOID ID LPAR RPAR

   15 FieldDecl: PUBLIC STATIC Type ID FieldDeclAux SEMICOLON

   16 FieldDeclAux: COMMA ID FieldDeclAux
   17             | %empty

   18 Type: INT
   19     | DOUBLE
   20     | BOOL

   21 FormalParams: Type ID FormalParamsAux
   22             | STRING LSQ RSQ ID

   23 FormalParamsAux: COMMA Type ID FormalParamsAux
   24                | %empty

   25 VarDecl: Type ID VarDeclAux SEMICOLON

   26 VarDeclAux: COMMA ID VarDeclAux
   27           | %empty

   28 Statement: RETURN SEMICOLON
   29          | RETURN Expr SEMICOLON
   30          | SEMICOLON
   31          | PRINT LPAR Expr RPAR SEMICOLON
   32          | PRINT LPAR STRLIT RPAR SEMICOLON
   33          | MethodInvocation SEMICOLON
   34          | Assignment SEMICOLON
   35          | ParseArgs SEMICOLON

   36 MethodInvocation: ID LPAR Expr MethodInvocationaux RPAR
   37                 | ID LPAR RPAR

   38 MethodInvocationaux: COMMA Expr MethodInvocationaux
   39                    | %empty

   40 ParseArgs: PARSEINT LPAR ID LSQ Expr RSQ RPAR

   41 Assignment: ID ASSIGN Expr

   42 Expr: Expr PLUS Expr
   43     | Expr MINUS Expr
   44     | Expr STAR Expr
   45     | Expr DIV Expr
   46     | Expr MOD Expr
   47     | Expr OR Expr
   48     | Expr XOR Expr
   49     | Expr AND Expr
   50     | Expr LSHIFT Expr
   51     | Expr RSHIFT Expr
   52     | Expr EQ Expr
   53     | Expr NE Expr
   54     | Expr LT Expr
   55     | Expr GT Expr
   56     | Expr LE Expr
   57     | Expr GE Expr
   58     | MINUS Expr
   59     | NOT Expr
   60     | PLUS Expr
   61     | LPAR Expr RPAR
   62     | ID
   63     | ID DOTLENGTH
   64     | INTLIT
   65     | REALLIT
   66     | BOOLLIT


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    CLASS (258) 1
    PUBLIC (259) 15
    STATIC (260) 15
    STRING (261) 22
    VOID (262) 13 14
    INT (263) 18
    DOUBLE (264) 19
    BOOL (265) 20
    SEMICOLON (266) 15 25 28 29 30 31 32 33 34 35
    COMMA (267) 16 23 26 38
    LBRACE (268) 1
    RBRACE (269) 1
    LPAR (270) 11 12 13 14 31 32 36 37 40 61
    RPAR (271) 11 12 13 14 31 32 36 37 40 61
    LSQ (272) 22 40
    RSQ (273) 22 40
    ASSIGN (274) 41
    PLUS (275) 42 60
    MINUS (276) 43 58
    STAR (277) 44
    DIV (278) 45
    MOD (279) 46
    XOR (280) 48
    OR (281) 47
    AND (282) 49
    BOOLLIT (283) 66
    EQ (284) 52
    NE (285) 53
    LE (286) 56
    GE (287) 57
    LT (288) 54
    GT (289) 55
    NOT (290) 59
    WHILE (291)
    IF (292)
    ELSE (293)
    RETURN (294) 28 29
    ARROW (295)
    LSHIFT (296) 50
    RSHIFT (297) 51
    DOTLENGTH (298) 63
    PRINT (299) 31 32
    PARSEINT (300) 40
    RESERVED (301)
    REALLIT <string> (302) 65
    STRLIT <string> (303) 32
    INTLIT <string> (304) 64
    ID <string> (305) 1 11 12 13 14 15 16 21 22 23 25 26 36 37 40 41 62 63


Nonterminals, with rules where they appear

    $accept (51)
        on left: 0
    Program <ast> (52)
        on left: 1
        on right: 0
    Xona <ast> (53)
        on left: 2 3 4 5 6 7 8 9 10
        on right: 1
    MethodHeader <ast> (54)
        on left: 11 12 13 14
        on right: 10
    FieldDecl <ast> (55)
        on left: 15
        on right: 8
    FieldDeclAux <ast> (56)
        on left: 16 17
        on right: 15 16
    Type <ast> (57)
        on left: 18 19 20
        on right: 11 12 15 21 23 25
    FormalParams <ast> (58)
        on left: 21 22
        on right: 9 11 13
    FormalParamsAux <ast> (59)
        on left: 23 24
        on right: 21 23
    VarDecl <ast> (60)
        on left: 25
        on right: 7
    VarDeclAux <ast> (61)
        on left: 26 27
        on right: 25 26
    Statement <ast> (62)
        on left: 28 29 30 31 32 33 34 35
        on right: 6
    MethodInvocation <ast> (63)
        on left: 36 37
        on right: 5 33
    MethodInvocationaux <ast> (64)
        on left: 38 39
        on right: 36 38
    ParseArgs <ast> (65)
        on left: 40
        on right: 4 35
    Assignment <ast> (66)
        on left: 41
        on right: 3 34
    Expr <ast> (67)
        on left: 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66
        on right: 2 29 31 36 38 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61


State 0

    0 $accept: . Program $end

    CLASS  shift, and go to state 1

    Program  go to state 2


State 1

    1 Program: CLASS . ID LBRACE Xona RBRACE

    ID  shift, and go to state 3


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 4


State 3

    1 Program: CLASS ID . LBRACE Xona RBRACE

    LBRACE  shift, and go to state 5


State 4

    0 $accept: Program $end .

    $default  accept


State 5

    1 Program: CLASS ID LBRACE . Xona RBRACE

    PUBLIC     shift, and go to state 6
    STRING     shift, and go to state 7
    VOID       shift, and go to state 8
    INT        shift, and go to state 9
    DOUBLE     shift, and go to state 10
    BOOL       shift, and go to state 11
    SEMICOLON  shift, and go to state 12
    LPAR       shift, and go to state 13
    PLUS       shift, and go to state 14
    MINUS      shift, and go to state 15
    BOOLLIT    shift, and go to state 16
    NOT        shift, and go to state 17
    RETURN     shift, and go to state 18
    PRINT      shift, and go to state 19
    PARSEINT   shift, and go to state 20
    REALLIT    shift, and go to state 21
    INTLIT     shift, and go to state 22
    ID         shift, and go to state 23

    Xona              go to state 24
    MethodHeader      go to state 25
    FieldDecl         go to state 26
    Type              go to state 27
    FormalParams      go to state 28
    VarDecl           go to state 29
    Statement         go to state 30
    MethodInvocation  go to state 31
    ParseArgs         go to state 32
    Assignment        go to state 33
    Expr              go to state 34


State 6

   15 FieldDecl: PUBLIC . STATIC Type ID FieldDeclAux SEMICOLON

    STATIC  shift, and go to state 35


State 7

   22 FormalParams: STRING . LSQ RSQ ID

    LSQ  shift, and go to state 36


State 8

   13 MethodHeader: VOID . ID LPAR FormalParams RPAR
   14             | VOID . ID LPAR RPAR

    ID  shift, and go to state 37


State 9

   18 Type: INT .

    $default  reduce using rule 18 (Type)


State 10

   19 Type: DOUBLE .

    $default  reduce using rule 19 (Type)


State 11

   20 Type: BOOL .

    $default  reduce using rule 20 (Type)


State 12

   30 Statement: SEMICOLON .

    $default  reduce using rule 30 (Statement)


State 13

   61 Expr: LPAR . Expr RPAR

    LPAR     shift, and go to state 13
    PLUS     shift, and go to state 14
    MINUS    shift, and go to state 15
    BOOLLIT  shift, and go to state 16
    NOT      shift, and go to state 17
    REALLIT  shift, and go to state 21
    INTLIT   shift, and go to state 22
    ID       shift, and go to state 38

    Expr  go to state 39


State 14

   60 Expr: PLUS . Expr

    LPAR     shift, and go to state 13
    PLUS     shift, and go to state 14
    MINUS    shift, and go to state 15
    BOOLLIT  shift, and go to state 16
    NOT      shift, and go to state 17
    REALLIT  shift, and go to state 21
    INTLIT   shift, and go to state 22
    ID       shift, and go to state 38

    Expr  go to state 40


State 15

   58 Expr: MINUS . Expr

    LPAR     shift, and go to state 13
    PLUS     shift, and go to state 14
    MINUS    shift, and go to state 15
    BOOLLIT  shift, and go to state 16
    NOT      shift, and go to state 17
    REALLIT  shift, and go to state 21
    INTLIT   shift, and go to state 22
    ID       shift, and go to state 38

    Expr  go to state 41


State 16

   66 Expr: BOOLLIT .

    $default  reduce using rule 66 (Expr)


State 17

   59 Expr: NOT . Expr

    LPAR     shift, and go to state 13
    PLUS     shift, and go to state 14
    MINUS    shift, and go to state 15
    BOOLLIT  shift, and go to state 16
    NOT      shift, and go to state 17
    REALLIT  shift, and go to state 21
    INTLIT   shift, and go to state 22
    ID       shift, and go to state 38

    Expr  go to state 42


State 18

   28 Statement: RETURN . SEMICOLON
   29          | RETURN . Expr SEMICOLON

    SEMICOLON  shift, and go to state 43
    LPAR       shift, and go to state 13
    PLUS       shift, and go to state 14
    MINUS      shift, and go to state 15
    BOOLLIT    shift, and go to state 16
    NOT        shift, and go to state 17
    REALLIT    shift, and go to state 21
    INTLIT     shift, and go to state 22
    ID         shift, and go to state 38

    Expr  go to state 44


State 19

   31 Statement: PRINT . LPAR Expr RPAR SEMICOLON
   32          | PRINT . LPAR STRLIT RPAR SEMICOLON

    LPAR  shift, and go to state 45


State 20

   40 ParseArgs: PARSEINT . LPAR ID LSQ Expr RSQ RPAR

    LPAR  shift, and go to state 46


State 21

   65 Expr: REALLIT .

    $default  reduce using rule 65 (Expr)


State 22

   64 Expr: INTLIT .

    $default  reduce using rule 64 (Expr)


State 23

   36 MethodInvocation: ID . LPAR Expr MethodInvocationaux RPAR
   37                 | ID . LPAR RPAR
   41 Assignment: ID . ASSIGN Expr
   62 Expr: ID .
   63     | ID . DOTLENGTH

    LPAR       shift, and go to state 47
    ASSIGN     shift, and go to state 48
    DOTLENGTH  shift, and go to state 49

    $default  reduce using rule 62 (Expr)


State 24

    1 Program: CLASS ID LBRACE Xona . RBRACE

    RBRACE  shift, and go to state 50


State 25

   10 Xona: MethodHeader .

    $default  reduce using rule 10 (Xona)


State 26

    8 Xona: FieldDecl .

    $default  reduce using rule 8 (Xona)


State 27

   11 MethodHeader: Type . ID LPAR FormalParams RPAR
   12             | Type . ID LPAR RPAR
   21 FormalParams: Type . ID FormalParamsAux
   25 VarDecl: Type . ID VarDeclAux SEMICOLON

    ID  shift, and go to state 51


State 28

    9 Xona: FormalParams .

    $default  reduce using rule 9 (Xona)


State 29

    7 Xona: VarDecl .

    $default  reduce using rule 7 (Xona)


State 30

    6 Xona: Statement .

    $default  reduce using rule 6 (Xona)


State 31

    5 Xona: MethodInvocation .
   33 Statement: MethodInvocation . SEMICOLON

    SEMICOLON  shift, and go to state 52

    $default  reduce using rule 5 (Xona)


State 32

    4 Xona: ParseArgs .
   35 Statement: ParseArgs . SEMICOLON

    SEMICOLON  shift, and go to state 53

    $default  reduce using rule 4 (Xona)


State 33

    3 Xona: Assignment .
   34 Statement: Assignment . SEMICOLON

    SEMICOLON  shift, and go to state 54

    $default  reduce using rule 3 (Xona)


State 34

    2 Xona: Expr .
   42 Expr: Expr . PLUS Expr
   43     | Expr . MINUS Expr
   44     | Expr . STAR Expr
   45     | Expr . DIV Expr
   46     | Expr . MOD Expr
   47     | Expr . OR Expr
   48     | Expr . XOR Expr
   49     | Expr . AND Expr
   50     | Expr . LSHIFT Expr
   51     | Expr . RSHIFT Expr
   52     | Expr . EQ Expr
   53     | Expr . NE Expr
   54     | Expr . LT Expr
   55     | Expr . GT Expr
   56     | Expr . LE Expr
   57     | Expr . GE Expr

    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    STAR    shift, and go to state 57
    DIV     shift, and go to state 58
    MOD     shift, and go to state 59
    XOR     shift, and go to state 60
    OR      shift, and go to state 61
    AND     shift, and go to state 62
    EQ      shift, and go to state 63
    NE      shift, and go to state 64
    LE      shift, and go to state 65
    GE      shift, and go to state 66
    LT      shift, and go to state 67
    GT      shift, and go to state 68
    LSHIFT  shift, and go to state 69
    RSHIFT  shift, and go to state 70

    $default  reduce using rule 2 (Xona)


State 35

   15 FieldDecl: PUBLIC STATIC . Type ID FieldDeclAux SEMICOLON

    INT     shift, and go to state 9
    DOUBLE  shift, and go to state 10
    BOOL    shift, and go to state 11

    Type  go to state 71


State 36

   22 FormalParams: STRING LSQ . RSQ ID

    RSQ  shift, and go to state 72


State 37

   13 MethodHeader: VOID ID . LPAR FormalParams RPAR
   14             | VOID ID . LPAR RPAR

    LPAR  shift, and go to state 73


State 38

   62 Expr: ID .
   63     | ID . DOTLENGTH

    DOTLENGTH  shift, and go to state 49

    $default  reduce using rule 62 (Expr)


State 39

   42 Expr: Expr . PLUS Expr
   43     | Expr . MINUS Expr
   44     | Expr . STAR Expr
   45     | Expr . DIV Expr
   46     | Expr . MOD Expr
   47     | Expr . OR Expr
   48     | Expr . XOR Expr
   49     | Expr . AND Expr
   50     | Expr . LSHIFT Expr
   51     | Expr . RSHIFT Expr
   52     | Expr . EQ Expr
   53     | Expr . NE Expr
   54     | Expr . LT Expr
   55     | Expr . GT Expr
   56     | Expr . LE Expr
   57     | Expr . GE Expr
   61     | LPAR Expr . RPAR

    RPAR    shift, and go to state 74
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    STAR    shift, and go to state 57
    DIV     shift, and go to state 58
    MOD     shift, and go to state 59
    XOR     shift, and go to state 60
    OR      shift, and go to state 61
    AND     shift, and go to state 62
    EQ      shift, and go to state 63
    NE      shift, and go to state 64
    LE      shift, and go to state 65
    GE      shift, and go to state 66
    LT      shift, and go to state 67
    GT      shift, and go to state 68
    LSHIFT  shift, and go to state 69
    RSHIFT  shift, and go to state 70


State 40

   42 Expr: Expr . PLUS Expr
   43     | Expr . MINUS Expr
   44     | Expr . STAR Expr
   45     | Expr . DIV Expr
   46     | Expr . MOD Expr
   47     | Expr . OR Expr
   48     | Expr . XOR Expr
   49     | Expr . AND Expr
   50     | Expr . LSHIFT Expr
   51     | Expr . RSHIFT Expr
   52     | Expr . EQ Expr
   53     | Expr . NE Expr
   54     | Expr . LT Expr
   55     | Expr . GT Expr
   56     | Expr . LE Expr
   57     | Expr . GE Expr
   60     | PLUS Expr .

    STAR  shift, and go to state 57
    DIV   shift, and go to state 58
    MOD   shift, and go to state 59

    $default  reduce using rule 60 (Expr)


State 41

   42 Expr: Expr . PLUS Expr
   43     | Expr . MINUS Expr
   44     | Expr . STAR Expr
   45     | Expr . DIV Expr
   46     | Expr . MOD Expr
   47     | Expr . OR Expr
   48     | Expr . XOR Expr
   49     | Expr . AND Expr
   50     | Expr . LSHIFT Expr
   51     | Expr . RSHIFT Expr
   52     | Expr . EQ Expr
   53     | Expr . NE Expr
   54     | Expr . LT Expr
   55     | Expr . GT Expr
   56     | Expr . LE Expr
   57     | Expr . GE Expr
   58     | MINUS Expr .

    STAR  shift, and go to state 57
    DIV   shift, and go to state 58
    MOD   shift, and go to state 59

    $default  reduce using rule 58 (Expr)


State 42

   42 Expr: Expr . PLUS Expr
   43     | Expr . MINUS Expr
   44     | Expr . STAR Expr
   45     | Expr . DIV Expr
   46     | Expr . MOD Expr
   47     | Expr . OR Expr
   48     | Expr . XOR Expr
   49     | Expr . AND Expr
   50     | Expr . LSHIFT Expr
   51     | Expr . RSHIFT Expr
   52     | Expr . EQ Expr
   53     | Expr . NE Expr
   54     | Expr . LT Expr
   55     | Expr . GT Expr
   56     | Expr . LE Expr
   57     | Expr . GE Expr
   59     | NOT Expr .

    $default  reduce using rule 59 (Expr)


State 43

   28 Statement: RETURN SEMICOLON .

    $default  reduce using rule 28 (Statement)


State 44

   29 Statement: RETURN Expr . SEMICOLON
   42 Expr: Expr . PLUS Expr
   43     | Expr . MINUS Expr
   44     | Expr . STAR Expr
   45     | Expr . DIV Expr
   46     | Expr . MOD Expr
   47     | Expr . OR Expr
   48     | Expr . XOR Expr
   49     | Expr . AND Expr
   50     | Expr . LSHIFT Expr
   51     | Expr . RSHIFT Expr
   52     | Expr . EQ Expr
   53     | Expr . NE Expr
   54     | Expr . LT Expr
   55     | Expr . GT Expr
   56     | Expr . LE Expr
   57     | Expr . GE Expr

    SEMICOLON  shift, and go to state 75
    PLUS       shift, and go to state 55
    MINUS      shift, and go to state 56
    STAR       shift, and go to state 57
    DIV        shift, and go to state 58
    MOD        shift, and go to state 59
    XOR        shift, and go to state 60
    OR         shift, and go to state 61
    AND        shift, and go to state 62
    EQ         shift, and go to state 63
    NE         shift, and go to state 64
    LE         shift, and go to state 65
    GE         shift, and go to state 66
    LT         shift, and go to state 67
    GT         shift, and go to state 68
    LSHIFT     shift, and go to state 69
    RSHIFT     shift, and go to state 70


State 45

   31 Statement: PRINT LPAR . Expr RPAR SEMICOLON
   32          | PRINT LPAR . STRLIT RPAR SEMICOLON

    LPAR     shift, and go to state 13
    PLUS     shift, and go to state 14
    MINUS    shift, and go to state 15
    BOOLLIT  shift, and go to state 16
    NOT      shift, and go to state 17
    REALLIT  shift, and go to state 21
    STRLIT   shift, and go to state 76
    INTLIT   shift, and go to state 22
    ID       shift, and go to state 38

    Expr  go to state 77


State 46

   40 ParseArgs: PARSEINT LPAR . ID LSQ Expr RSQ RPAR

    ID  shift, and go to state 78


State 47

   36 MethodInvocation: ID LPAR . Expr MethodInvocationaux RPAR
   37                 | ID LPAR . RPAR

    LPAR     shift, and go to state 13
    RPAR     shift, and go to state 79
    PLUS     shift, and go to state 14
    MINUS    shift, and go to state 15
    BOOLLIT  shift, and go to state 16
    NOT      shift, and go to state 17
    REALLIT  shift, and go to state 21
    INTLIT   shift, and go to state 22
    ID       shift, and go to state 38

    Expr  go to state 80


State 48

   41 Assignment: ID ASSIGN . Expr

    LPAR     shift, and go to state 13
    PLUS     shift, and go to state 14
    MINUS    shift, and go to state 15
    BOOLLIT  shift, and go to state 16
    NOT      shift, and go to state 17
    REALLIT  shift, and go to state 21
    INTLIT   shift, and go to state 22
    ID       shift, and go to state 38

    Expr  go to state 81


State 49

   63 Expr: ID DOTLENGTH .

    $default  reduce using rule 63 (Expr)


State 50

    1 Program: CLASS ID LBRACE Xona RBRACE .

    $default  reduce using rule 1 (Program)


State 51

   11 MethodHeader: Type ID . LPAR FormalParams RPAR
   12             | Type ID . LPAR RPAR
   21 FormalParams: Type ID . FormalParamsAux
   25 VarDecl: Type ID . VarDeclAux SEMICOLON

    COMMA  shift, and go to state 82
    LPAR   shift, and go to state 83

    SEMICOLON  reduce using rule 27 (VarDeclAux)
    $default   reduce using rule 24 (FormalParamsAux)

    FormalParamsAux  go to state 84
    VarDeclAux       go to state 85


State 52

   33 Statement: MethodInvocation SEMICOLON .

    $default  reduce using rule 33 (Statement)


State 53

   35 Statement: ParseArgs SEMICOLON .

    $default  reduce using rule 35 (Statement)


State 54

   34 Statement: Assignment SEMICOLON .

    $default  reduce using rule 34 (Statement)


State 55

   42 Expr: Expr PLUS . Expr

    LPAR     shift, and go to state 13
    PLUS     shift, and go to state 14
    MINUS    shift, and go to state 15
    BOOLLIT  shift, and go to state 16
    NOT      shift, and go to state 17
    REALLIT  shift, and go to state 21
    INTLIT   shift, and go to state 22
    ID       shift, and go to state 38

    Expr  go to state 86


State 56

   43 Expr: Expr MINUS . Expr

    LPAR     shift, and go to state 13
    PLUS     shift, and go to state 14
    MINUS    shift, and go to state 15
    BOOLLIT  shift, and go to state 16
    NOT      shift, and go to state 17
    REALLIT  shift, and go to state 21
    INTLIT   shift, and go to state 22
    ID       shift, and go to state 38

    Expr  go to state 87


State 57

   44 Expr: Expr STAR . Expr

    LPAR     shift, and go to state 13
    PLUS     shift, and go to state 14
    MINUS    shift, and go to state 15
    BOOLLIT  shift, and go to state 16
    NOT      shift, and go to state 17
    REALLIT  shift, and go to state 21
    INTLIT   shift, and go to state 22
    ID       shift, and go to state 38

    Expr  go to state 88


State 58

   45 Expr: Expr DIV . Expr

    LPAR     shift, and go to state 13
    PLUS     shift, and go to state 14
    MINUS    shift, and go to state 15
    BOOLLIT  shift, and go to state 16
    NOT      shift, and go to state 17
    REALLIT  shift, and go to state 21
    INTLIT   shift, and go to state 22
    ID       shift, and go to state 38

    Expr  go to state 89


State 59

   46 Expr: Expr MOD . Expr

    LPAR     shift, and go to state 13
    PLUS     shift, and go to state 14
    MINUS    shift, and go to state 15
    BOOLLIT  shift, and go to state 16
    NOT      shift, and go to state 17
    REALLIT  shift, and go to state 21
    INTLIT   shift, and go to state 22
    ID       shift, and go to state 38

    Expr  go to state 90


State 60

   48 Expr: Expr XOR . Expr

    LPAR     shift, and go to state 13
    PLUS     shift, and go to state 14
    MINUS    shift, and go to state 15
    BOOLLIT  shift, and go to state 16
    NOT      shift, and go to state 17
    REALLIT  shift, and go to state 21
    INTLIT   shift, and go to state 22
    ID       shift, and go to state 38

    Expr  go to state 91


State 61

   47 Expr: Expr OR . Expr

    LPAR     shift, and go to state 13
    PLUS     shift, and go to state 14
    MINUS    shift, and go to state 15
    BOOLLIT  shift, and go to state 16
    NOT      shift, and go to state 17
    REALLIT  shift, and go to state 21
    INTLIT   shift, and go to state 22
    ID       shift, and go to state 38

    Expr  go to state 92


State 62

   49 Expr: Expr AND . Expr

    LPAR     shift, and go to state 13
    PLUS     shift, and go to state 14
    MINUS    shift, and go to state 15
    BOOLLIT  shift, and go to state 16
    NOT      shift, and go to state 17
    REALLIT  shift, and go to state 21
    INTLIT   shift, and go to state 22
    ID       shift, and go to state 38

    Expr  go to state 93


State 63

   52 Expr: Expr EQ . Expr

    LPAR     shift, and go to state 13
    PLUS     shift, and go to state 14
    MINUS    shift, and go to state 15
    BOOLLIT  shift, and go to state 16
    NOT      shift, and go to state 17
    REALLIT  shift, and go to state 21
    INTLIT   shift, and go to state 22
    ID       shift, and go to state 38

    Expr  go to state 94


State 64

   53 Expr: Expr NE . Expr

    LPAR     shift, and go to state 13
    PLUS     shift, and go to state 14
    MINUS    shift, and go to state 15
    BOOLLIT  shift, and go to state 16
    NOT      shift, and go to state 17
    REALLIT  shift, and go to state 21
    INTLIT   shift, and go to state 22
    ID       shift, and go to state 38

    Expr  go to state 95


State 65

   56 Expr: Expr LE . Expr

    LPAR     shift, and go to state 13
    PLUS     shift, and go to state 14
    MINUS    shift, and go to state 15
    BOOLLIT  shift, and go to state 16
    NOT      shift, and go to state 17
    REALLIT  shift, and go to state 21
    INTLIT   shift, and go to state 22
    ID       shift, and go to state 38

    Expr  go to state 96


State 66

   57 Expr: Expr GE . Expr

    LPAR     shift, and go to state 13
    PLUS     shift, and go to state 14
    MINUS    shift, and go to state 15
    BOOLLIT  shift, and go to state 16
    NOT      shift, and go to state 17
    REALLIT  shift, and go to state 21
    INTLIT   shift, and go to state 22
    ID       shift, and go to state 38

    Expr  go to state 97


State 67

   54 Expr: Expr LT . Expr

    LPAR     shift, and go to state 13
    PLUS     shift, and go to state 14
    MINUS    shift, and go to state 15
    BOOLLIT  shift, and go to state 16
    NOT      shift, and go to state 17
    REALLIT  shift, and go to state 21
    INTLIT   shift, and go to state 22
    ID       shift, and go to state 38

    Expr  go to state 98


State 68

   55 Expr: Expr GT . Expr

    LPAR     shift, and go to state 13
    PLUS     shift, and go to state 14
    MINUS    shift, and go to state 15
    BOOLLIT  shift, and go to state 16
    NOT      shift, and go to state 17
    REALLIT  shift, and go to state 21
    INTLIT   shift, and go to state 22
    ID       shift, and go to state 38

    Expr  go to state 99


State 69

   50 Expr: Expr LSHIFT . Expr

    LPAR     shift, and go to state 13
    PLUS     shift, and go to state 14
    MINUS    shift, and go to state 15
    BOOLLIT  shift, and go to state 16
    NOT      shift, and go to state 17
    REALLIT  shift, and go to state 21
    INTLIT   shift, and go to state 22
    ID       shift, and go to state 38

    Expr  go to state 100


State 70

   51 Expr: Expr RSHIFT . Expr

    LPAR     shift, and go to state 13
    PLUS     shift, and go to state 14
    MINUS    shift, and go to state 15
    BOOLLIT  shift, and go to state 16
    NOT      shift, and go to state 17
    REALLIT  shift, and go to state 21
    INTLIT   shift, and go to state 22
    ID       shift, and go to state 38

    Expr  go to state 101


State 71

   15 FieldDecl: PUBLIC STATIC Type . ID FieldDeclAux SEMICOLON

    ID  shift, and go to state 102


State 72

   22 FormalParams: STRING LSQ RSQ . ID

    ID  shift, and go to state 103


State 73

   13 MethodHeader: VOID ID LPAR . FormalParams RPAR
   14             | VOID ID LPAR . RPAR

    STRING  shift, and go to state 7
    INT     shift, and go to state 9
    DOUBLE  shift, and go to state 10
    BOOL    shift, and go to state 11
    RPAR    shift, and go to state 104

    Type          go to state 105
    FormalParams  go to state 106


State 74

   61 Expr: LPAR Expr RPAR .

    $default  reduce using rule 61 (Expr)


State 75

   29 Statement: RETURN Expr SEMICOLON .

    $default  reduce using rule 29 (Statement)


State 76

   32 Statement: PRINT LPAR STRLIT . RPAR SEMICOLON

    RPAR  shift, and go to state 107


State 77

   31 Statement: PRINT LPAR Expr . RPAR SEMICOLON
   42 Expr: Expr . PLUS Expr
   43     | Expr . MINUS Expr
   44     | Expr . STAR Expr
   45     | Expr . DIV Expr
   46     | Expr . MOD Expr
   47     | Expr . OR Expr
   48     | Expr . XOR Expr
   49     | Expr . AND Expr
   50     | Expr . LSHIFT Expr
   51     | Expr . RSHIFT Expr
   52     | Expr . EQ Expr
   53     | Expr . NE Expr
   54     | Expr . LT Expr
   55     | Expr . GT Expr
   56     | Expr . LE Expr
   57     | Expr . GE Expr

    RPAR    shift, and go to state 108
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    STAR    shift, and go to state 57
    DIV     shift, and go to state 58
    MOD     shift, and go to state 59
    XOR     shift, and go to state 60
    OR      shift, and go to state 61
    AND     shift, and go to state 62
    EQ      shift, and go to state 63
    NE      shift, and go to state 64
    LE      shift, and go to state 65
    GE      shift, and go to state 66
    LT      shift, and go to state 67
    GT      shift, and go to state 68
    LSHIFT  shift, and go to state 69
    RSHIFT  shift, and go to state 70


State 78

   40 ParseArgs: PARSEINT LPAR ID . LSQ Expr RSQ RPAR

    LSQ  shift, and go to state 109


State 79

   37 MethodInvocation: ID LPAR RPAR .

    $default  reduce using rule 37 (MethodInvocation)


State 80

   36 MethodInvocation: ID LPAR Expr . MethodInvocationaux RPAR
   42 Expr: Expr . PLUS Expr
   43     | Expr . MINUS Expr
   44     | Expr . STAR Expr
   45     | Expr . DIV Expr
   46     | Expr . MOD Expr
   47     | Expr . OR Expr
   48     | Expr . XOR Expr
   49     | Expr . AND Expr
   50     | Expr . LSHIFT Expr
   51     | Expr . RSHIFT Expr
   52     | Expr . EQ Expr
   53     | Expr . NE Expr
   54     | Expr . LT Expr
   55     | Expr . GT Expr
   56     | Expr . LE Expr
   57     | Expr . GE Expr

    COMMA   shift, and go to state 110
    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    STAR    shift, and go to state 57
    DIV     shift, and go to state 58
    MOD     shift, and go to state 59
    XOR     shift, and go to state 60
    OR      shift, and go to state 61
    AND     shift, and go to state 62
    EQ      shift, and go to state 63
    NE      shift, and go to state 64
    LE      shift, and go to state 65
    GE      shift, and go to state 66
    LT      shift, and go to state 67
    GT      shift, and go to state 68
    LSHIFT  shift, and go to state 69
    RSHIFT  shift, and go to state 70

    $default  reduce using rule 39 (MethodInvocationaux)

    MethodInvocationaux  go to state 111


State 81

   41 Assignment: ID ASSIGN Expr .
   42 Expr: Expr . PLUS Expr
   43     | Expr . MINUS Expr
   44     | Expr . STAR Expr
   45     | Expr . DIV Expr
   46     | Expr . MOD Expr
   47     | Expr . OR Expr
   48     | Expr . XOR Expr
   49     | Expr . AND Expr
   50     | Expr . LSHIFT Expr
   51     | Expr . RSHIFT Expr
   52     | Expr . EQ Expr
   53     | Expr . NE Expr
   54     | Expr . LT Expr
   55     | Expr . GT Expr
   56     | Expr . LE Expr
   57     | Expr . GE Expr

    PLUS    shift, and go to state 55
    MINUS   shift, and go to state 56
    STAR    shift, and go to state 57
    DIV     shift, and go to state 58
    MOD     shift, and go to state 59
    XOR     shift, and go to state 60
    OR      shift, and go to state 61
    AND     shift, and go to state 62
    EQ      shift, and go to state 63
    NE      shift, and go to state 64
    LE      shift, and go to state 65
    GE      shift, and go to state 66
    LT      shift, and go to state 67
    GT      shift, and go to state 68
    LSHIFT  shift, and go to state 69
    RSHIFT  shift, and go to state 70

    $default  reduce using rule 41 (Assignment)


State 82

   23 FormalParamsAux: COMMA . Type ID FormalParamsAux
   26 VarDeclAux: COMMA . ID VarDeclAux

    INT     shift, and go to state 9
    DOUBLE  shift, and go to state 10
    BOOL    shift, and go to state 11
    ID      shift, and go to state 112

    Type  go to state 113


State 83

   11 MethodHeader: Type ID LPAR . FormalParams RPAR
   12             | Type ID LPAR . RPAR

    STRING  shift, and go to state 7
    INT     shift, and go to state 9
    DOUBLE  shift, and go to state 10
    BOOL    shift, and go to state 11
    RPAR    shift, and go to state 114

    Type          go to state 105
    FormalParams  go to state 115


State 84

   21 FormalParams: Type ID FormalParamsAux .

    $default  reduce using rule 21 (FormalParams)


State 85

   25 VarDecl: Type ID VarDeclAux . SEMICOLON

    SEMICOLON  shift, and go to state 116


State 86
